--- a/meonggae_prj/src/main/webapp/common/My/css/style_mypage.css
+++ b/meonggae_prj/src/main/webapp/common/My/css/style_mypage.css
@@ -319,3 +319,15 @@
 	margin-top: 30px;
 	margin-bottom: 50px;
 }
+
+#boughtGoods{
+	font-size: 18px;
+	font-weight: normal;
+	color: #28403C;
+	margin-top: 5px;
+}
+
+#reivewContents{
+	font-size: 16px;
+	font-weight: normal;
+}
