--- a/meonggae_prj/src/main/webapp/common/CSS/nick_dup.css
+++ b/meonggae_prj/src/main/webapp/common/CSS/nick_dup.css
@@ -1,4 +1,35 @@
 @charset "UTF-8";
-#dupResult{position: absolute; top: 270px; left: 140px}
-#btns{position: absolute; font-size:19px; color: black; text-decoration: none; top: 60px; left: 55px;}
-#btns strong{border:solid 2px #666666; border-radius: 7px; padding: 7px; background-color: #BEEFFF;}
+#dupResult{/*position: absolute;*/text-align: center; font-size: 17px}
+/* #btns{position: absolute; font-size:19px; color: black; text-decoration: none; top: 60px; left: 55px;} */
+/* #btns strong{border:solid 2px #666666; border-radius: 7px; padding: 7px; background-color: #BEEFFF;} */
+.conBox{margin: 20px 0px 25px 0px!important;}
+.inw195{text-align: center; border-radius: 7px; font-size: 20px; border: 2px solid black !important;}
+.idCheck_wrap h2 span {
+    font-size: 30px;
+}
+.idCheck_wrap {
+    height: 320px !important;
+    margin: 10px;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 1px solid #d7d7d7;
+    text-align: center;
+}
+a.button {
+  display: inline-block;
+  position: relative;
+  width: 100px;
+  padding: 0;
+  margin: 10px 0px 10px 0;
+  font-weight: 500;
+  line-height: 40px;
+  color: #fff;
+  border-radius: 7px;
+  transition: all 0.2s ;
+  z-index: 5;
+  background-color:#37474f; 
+  text-decoration: none;
+}
+.btnBlueGreen.btnPush {
+  box-shadow: 0px 5px 0px 0px #1d2930;
+}
