--- a/meonggae_prj/src/main/webapp/common/CSS/responsive.css
+++ b/meonggae_prj/src/main/webapp/common/CSS/responsive.css
@@ -1,256 +1,261 @@
 @charset "UTF-8";
 /* Extra small devices (phones, less than 768px) */
-@media (max-width: 768px) { 
-    .navbar-header {
-        float: right;
-    }
-    .navbar-toggle {
-        display: block;
-        border-color: #fff;
-        margin: 15px 0px 0px;
-        border-radius: 0px;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-        display:block !important;
-        padding: 0px 30px;
-    }
-    #navbar ul li a {
-        padding: 10px;
-    }
-    .navbar-toggle span {
-        background: #fff;
-    }
-    .logo {
-        padding-top: 70px;
-    }
-    .cart-text {
-        width: 75px;
-        font-size: 8pt;
-    }
-    form.navbar-form input {
-        min-width: auto;
-    }
-    .social ul li, .action ul li {
-        padding: 10px;
-    }
-
-    .top-bar {
-        min-height: auto;
-    }
-    .logo {
-        width: 250px;
-        margin: auto;
-        padding: 30px 0px;
-    }
-
-    .search-form {
-        padding: 0px;
-    }
-
-    form.navbar-form input {
-        width: auto;
-        margin: auto;
-    }
-
-    form.navbar-form {
-        margin: auto;
-    }
-
-    .search-form .form-group {
-        display: inline-block;
-    }
-
-    form.navbar-form button {
-        display: inline-block;
-        margin-top: -2px;
-    }
-    .cart {
-        padding: 15px 0px 25px;
-        margin: auto;
-        text-align: center;
-        width: auto;
-        display: table;
-    }
-
-    .navbar-header button {
-        margin-right: 20px;
-    }
-
-    .shop-category button.btn {
-        padding: 6px 20px;
-    }
-    form.navbar-form input {
-        width: 165px;
-    }
-    .slider {
-        margin-bottom: 20px;
-    }
-    .single-process {
-        padding-bottom: 25px;
-    }
-    .single-post {
-        margin-bottom: 25px;
-    }
-    .single-widget:after {
-        width: 0px;
-    }
-    .short-description {
-        margin: 20px;
-    }
-    h1.product-title {
-        margin-top: 15px;
-    }
-    .qt-area {
-        display: table;
-        margin: auto;
-    }
-
-    .purchase-form button.btn-theme {
-        display: table;
-        margin: 10px auto;
-    }
-
-    .social-share {
-        display: table;
-        margin: auto;
-    }
+@media ( max-width : 768px) {
+	.navbar-header {
+		float: right;
+	}
+	.navbar-toggle {
+		display: block;
+		border-color: #fff;
+		margin: 15px 0px 0px;
+		border-radius: 0px;
+	}
+	.navbar-collapse {
+		border-top: 1px solid transparent;
+		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+	}
+	.navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+	.navbar-collapse.collapse {
+		display: none !important;
+	}
+	.navbar-nav {
+		float: none !important;
+	}
+	.navbar-nav>li {
+		float: none;
+	}
+	.navbar-nav>li>a {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.collapse.in {
+		display: block !important;
+		padding: 0px 30px;
+	}
+	#navbar ul li a {
+		padding: 10px;
+	}
+	.navbar-toggle span {
+		background: #fff;
+	}
+	.logo {
+		padding-top: 70px;
+	}
+	.cart-text {
+		width: 75px;
+		font-size: 8pt;
+	}
+	form.navbar-form input {
+		min-width: auto;
+	}
+	.social ul li, .action ul li {
+		padding: 10px;
+	}
+	.top-bar {
+		min-height: auto;
+	}
+	.logo {
+		width: 250px;
+		margin: auto;
+		padding: 30px 0px;
+	}
+	.search-form {
+		padding: 0px;
+	}
+	form.navbar-form input {
+		width: auto;
+		margin: auto;
+	}
+	form.navbar-form {
+		margin: auto;
+	}
+	.search-form .form-group {
+		display: inline-block;
+	}
+	form.navbar-form button {
+		display: inline-block;
+		margin-top: -2px;
+	}
+	.cart {
+		padding: 15px 0px 25px;
+		margin: auto;
+		text-align: center;
+		width: auto;
+		display: table;
+	}
+	.navbar-header button {
+		margin-right: 20px;
+	}
+	.shop-category button.btn {
+		padding: 6px 20px;
+	}
+	form.navbar-form input {
+		width: 165px;
+	}
+	.slider {
+		margin-bottom: 20px;
+	}
+	.single-process {
+		padding-bottom: 25px;
+	}
+	.single-post {
+		margin-bottom: 25px;
+	}
+	.single-widget:after {
+		width: 0px;
+	}
+	.short-description {
+		margin: 20px;
+	}
+	h1.product-title {
+		margin-top: 15px;
+	}
+	.qt-area {
+		display: table;
+		margin: auto;
+	}
+	.purchase-form button.btn-theme {
+		display: table;
+		margin: 10px auto;
+	}
+	.social-share {
+		display: table;
+		margin: auto;
+	}
 }
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 992px) { 
-/*	.categories.show{*/
-/*		left: 14%;*/
-/*	}*/
-    .navbar-header {
-        float: right;
-    }
-    .navbar-toggle {
-        display: block;
-        border-color: #fff;
-        margin: 15px 0px 0px;
-        border-radius: 0px;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-        display:block !important;
-        padding: 0px;
-    }
-    #navbar ul li a {
-        padding: 10px;
-    }
-    .navbar-toggle span {
-        background: #fff;
-    }
-    .logo {
-        padding-top: 53px;
-    }
-    .icons-text {
-        width: 75px;
-        font-size: 8pt;
-    }
-    form.navbar-form input {
-        min-width: auto;
-    }
-    .big-slider .carousel-caption {
-        top: 5%;
-    }
-    .slider .item {
-        height: 245px;
-    }
-    .carousel-indicators {
-        bottom: -5px;
-    }
-    .post-thumbnail a.read-more {
-        padding: 10px;
-    }
-    .post-thumbnail .date {
-        padding: 10px 20px;
-    }
-    .single-widget h2.widget-title {
-        font-size:14pt;
-    }
-    .widget-inner {
-        font-size: 10pt;
-    }
-    .single-widget:after {
-        min-height: 280px;
-    }
-    .single-banner {
-        margin-bottom: 20px;
-    }
-    .no-padding{
+@media ( min-width : 768px) and (max-width: 992px) {
+	/*	.categories.show{*/
+	/*		left: 14%;*/
+	/*	}*/
+	.navbar-header {
+		float: right;
+	}
+	.navbar-toggle {
+		display: block;
+		border-color: #fff;
+		margin: 15px 0px 0px;
+		border-radius: 0px;
+	}
+	.navbar-collapse {
+		border-top: 1px solid transparent;
+		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+	}
+	.navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+	.navbar-collapse.collapse {
+		display: none !important;
+	}
+	.navbar-nav {
+		float: none !important;
+	}
+	.navbar-nav>li {
+		float: none;
+	}
+	.navbar-nav>li>a {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.collapse.in {
+		display: block !important;
+		padding: 0px;
+	}
+	#navbar ul li a {
+		padding: 10px;
+	}
+	.navbar-toggle span {
+		background: #fff;
+	}
+	.logo {
+		padding-top: 53px;
+	}
+	.icons-text {
+		width: 75px;
+		font-size: 8pt;
+	}
+	form.navbar-form input {
+		min-width: auto;
+	}
+	.big-slider .carousel-caption {
+		top: 5%;
+	}
+	.slider .item {
+		height: 245px;
+	}
+	.carousel-indicators {
+		bottom: -5px;
+	}
+	.post-thumbnail a.read-more {
+		padding: 10px;
+	}
+	.post-thumbnail .date {
+		padding: 10px 20px;
+	}
+	.single-widget h2.widget-title {
+		font-size: 14pt;
+	}
+	.widget-inner {
+		font-size: 10pt;
+	}
+	.single-widget:after {
+		min-height: 280px;
+	}
+	.single-banner {
+		margin-bottom: 20px;
+	}
+	.no-padding {
 		padding-bottom: 20px !important;
 	}
-	.single-products{
-    	grid-template-columns: repeat(3, 1fr);
+	.single-products {
+		grid-template-columns: repeat(3, 1fr);
 	}
 	.product-block img.thumbnail {
-    	width: 100%;
+		width: 100%;
 	}
-	.thumb-main-image{
+	.thumb-main-image {
 		margin-bottom: 30px;
 	}
-	.product-info-status{
+	.product-info-status {
 		padding: 100px 20px 30px 20px;
 	}
 	.products_categoryNavigation {
 		margin: 30px 16px 0 16px;
 	}
+	.row {
+		width: 720px !important
+	}
+	.list ul {
+		grid-template-columns: repeat(1, 1fr) !important;
+		width: 720px !important
+	}
+	.image-container img {
+		width: 718px;
+	}
+	.item a img.event-image {
+		height: 250px !important;
+	}
+	#carousel-example-generic {
+    height: 250px;
+}
 }
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) and (max-width: 1200px) { 
-    .logo {
-        padding-top: 40px;
-    }
-    .icons-text {
-        width: 75px;
-        font-size: 8pt;
-    }
-/*    .categories.show{*/
-/*		left: 4%;*/
-/*	}*/
+@media ( min-width : 992px) and (max-width: 1200px) {
+	.logo {
+		padding-top: 40px;
+	}
+	.icons-text {
+		width: 75px;
+		font-size: 8pt;
+	}
+	/*    .categories.show{*/
+	/*		left: 4%;*/
+	/*	}*/
 }
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
-
+@media ( min-width : 1200px) {
 }
