--- a/meonggae_prj/src/main/webapp/common/CSS/style.css
+++ b/meonggae_prj/src/main/webapp/common/CSS/style.css
@@ -49,7 +49,7 @@ img {
     position: sticky;
 	top: -10px;
     min-height: 150px;
-    z-index: 1;
+    z-index: 10;
   	border-bottom: 1px solid #d9d9d9;
   	background-color: white;
 }
@@ -739,4 +739,8 @@ ul.product-info-btn li:last-child a {
 .category-fav-item > p {
 	font-size: 10px;
 	color: #868e96;
+}
+.item a img.event-image {
+    width: 100%;
+    height: 300px !important;
 }
