회원가입 css변경

--- a/meonggae_prj/src/main/webapp/common/CSS/join-board.css
+++ b/meonggae_prj/src/main/webapp/common/CSS/join-board.css
@@ -218,6 +218,9 @@
 #frm > .btn {
 	width: 150px;
 }
+input#id:read-only, input#nick:read-only{
+	background-color: #e5e5e5;
+}
 /* 폼 내 버튼 */
 /* 제출 취소버튼 슬라이드*/
 .joinBtn {
