--- a/meonggae_prj/src/main/webapp/common/CSS/infinite_scroll.css
+++ b/meonggae_prj/src/main/webapp/common/CSS/infinite_scroll.css
@@ -121,3 +121,129 @@
     top: 0;
     width: 100px;
 }
+
+
+
+/**************************** 퀵메뉴 CSS ********************************************************/
+div, ul, li {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+.quickmenu {
+    position: absolute;
+    width: 100px;
+    top: 50%;
+    margin-top: -50px;
+    right: 10px;
+    background: #fff;
+    right: calc(50% - 700px);
+}
+
+.quickmenu ul {
+    position: relative;
+    float: left;
+    width: 100%;
+    display: inline-block;
+    *display: inline;
+    border: 1px solid #ddd;
+}
+
+.quickmenu ul li {
+    float: left;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+    display: inline-block;
+    *display: inline;
+}
+
+.quickmenu ul li a {
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.quickmenu ul li:last-child {
+    border-bottom: 0;
+}
+
+.recentPic {
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    color: rgb(204, 204, 204);
+    font-size: 12px;
+}
+
+.recentPic img {
+    width: 28px;
+    height: 16px;
+}
+.notEmpty img {
+    width: 90px;
+    height: 70px;
+}
+
+.recentMsg p {
+    color: #999;
+    font-weight: bold;
+}
+
+/* 새로 추가된 스타일 */
+.steamCount {
+    border: 1px solid #5F5F5F !important;
+}
+
+.steamCount li a {
+    padding-bottom: 65px;
+    color: #5F5F5F;
+    font-weight: bold !important;
+    text-decoration: none;
+}
+.steamCount li span, i {
+    color: #999;
+}
+
+.recentPrd {
+    margin-top: 10px;
+}
+
+.recentPrd li a {
+    padding-bottom: 150px;
+    color: #5F5F5F;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.toTheTop {
+    margin-top: 10px;
+}
+
+.toTheTop li a {
+    color: #5F5F5F !important;
+    font-size: 18px;
+    height: 50px !important;
+    font-weight: bold !important;
+    line-height: 50px !important;
+    text-decoration: none;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
+
+
