후기작성기능 별점 추가, 기타 자잘한 수정

--- a/meonggae_prj/src/main/webapp/common/My/css/style_mypage.css
+++ b/meonggae_prj/src/main/webapp/common/My/css/style_mypage.css
@@ -321,13 +321,13 @@
 }
 
 #boughtGoods{
-	font-size: 18px;
-	font-weight: normal;
-	color: #28403C;
-	margin-top: 5px;
+	font-size: 16px;
+	margin-top: 15px;
+	color: #4B4B4B;
 }
 
 #reivewContents{
 	font-size: 16px;
 	font-weight: normal;
+	width: 80%;
 }
