구매완료&자바스크립트 경로수정

--- a/meonggae_prj/src/main/webapp/common/CSS/infinite_scroll.css
+++ b/meonggae_prj/src/main/webapp/common/CSS/infinite_scroll.css
@@ -215,7 +215,8 @@ a {
     font-weight: bold !important;
     text-decoration: none;
 }
-.steamCount li span, i {
+.steamCount li a span,
+.steamCount li a i {
     color: #999;
 }
 
